test/sema/mutable-return-type.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:1: error: type specifier cannot specify mutability
mutable int foo() { return 42; }
